--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@inkline/inkline": "^3.1.9",
+    "@vercel/analytics": "^0.1.5",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
